--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <header>
     <h1>Данный сайт посвящён милки-женщине</h1>
     <p class="intro">Здесь будут его фотки, истории, ситуации и любовник (Memtosik)</p>
+    <button>АРБУЗ</button>
   </header>
 
   <main class="slots-container">
